[package]
name = "member_manager"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

# own settings
ink_storage_derive = { version = "3", default-features = false }
ink_prelude = { version = "3", default-features = false}
openbrush = {tag = "v2.2.0",  git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["ownable", "psp35"] }
#serde = { version = '1.0.100', default-features = false, features = ['derive'] }
#serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }
rustc-hex = { version="2.1.0", default-features = false }
bs58 = { version = "0.4.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
name = "member_manager"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "rustc-hex/std",
    'bs58/std',
]
ink-as-dependency = []
